Attempt to solve CSS text before tables

--- a/elimip2025.Rmd
+++ b/elimip2025.Rmd
@@ -303,8 +303,7 @@ df %>%
   modify_spanning_header (c("stat_1", "stat_2", "stat_3", "stat_4", "stat_5") ~ "**Region**") %>%
   modify_header(label ~ "**Characteristic**") %>%
   modify_caption("**Table. Description of the study population.**") %>% 
-  as_gt() %>% 
-  gt::as_raw_html(., inline_css = FALSE)
+  gt::render_gt()
 ```
 
 ```{r Table: Knowledge, attitudes, and practices per UDA5 region, echo = FALSE}
