--- a/elimip2025.Rmd
+++ b/elimip2025.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Mosquito-borne disease and protective behavior in metropolitan France"
+title: "Mosquito-borne diseases and protective behavior in France, 2023"
 author: "Juan Carlos Ocampo"
 date: "`r Sys.Date()`"
 output: rmarkdown::github_document
@@ -34,6 +34,7 @@ library(DHARMa)
 library(ggplot2)
 library(sjPlot)
 library(gtsummary)
+library(flextable)
 ```
 
 ```{r Packages: Versions, warning=FALSE, echo = FALSE}
@@ -281,7 +282,8 @@ df %>%
   add_overall() %>%
   modify_spanning_header (c("stat_1", "stat_2", "stat_3", "stat_4", "stat_5") ~ "**Region**") %>%
   modify_header(label ~ "**Characteristic**") %>%
-  modify_caption("**Table 1. Description of the study population.**")
+  modify_caption("**Table 1. Description of the study population.**") %>%
+  as_flex_table()
 ```
 
 ```{r Table: Knowledge, attitudes, and practices per UDA5 region, echo = FALSE}
@@ -313,186 +315,5 @@ df %>%
   modify_header(label ~ "**Protective behaviour**") %>%
   modify_caption("**Table 3. Mosquito-borne disease protective behaviours per region per UDA5 region**") %>% 
   as_gt()
-```
-
-# 2. Modelling
-
-## 2.1. Frequency of protective behaviour
-
-```{r Frequency of protective behaviour: Model selection}
-# Theory-informed model that includes a minimally sufficient set of confounding variables of the exposure-outcome relationship
-cmm2 <- clmm(freq_prevention ~ freq_bites_num + disease_fear + disease_prob + age + precarity2 + gender + edu2 + mbd_know + chronic_dis + confiance_nat + confiance_reg + hist_mborne + commune_type + (1|departement), data=df, Hess=T, nAGQ=10)
-
-# We remove independent variables that have non significant associations with the outcome variable (p-value<0.05) in one block
-# Confounders age and sex are kept regardless
-cmm1 <- clmm(freq_prevention ~ freq_bites_num + disease_fear + precarity2 + age + gender + (1|departement), data=df, Hess=T, nAGQ=10)
-#OLD ONE cmm1 <- clmm(freq_prevention ~ freq_bites_cat + disease_fear + disease_prob + precarity2 + age + gender + (1|departement), data=df, Hess=T, nAGQ=10)
-
-# Likelihood-ratio test: It evaluates if the model with fewer parameters performs significantly worse than the full mode
-cmm_lrt <- lrtest(cmm1, cmm2)
-#alternative: anova(cmm1, cmm2, test="LRT") #both are equivalent in this case
-cmm_lrt
-```
-
-```{r Frequency of protective behaviour: LRT, echo=FALSE}
-# Interpretation of likelihood ratio test results
-if (cmm_lrt$"Pr(>Chisq)"[2] < 0.05) 
-{
-  cat("Reject the null hypothesis. The full model is significantly better than 
-        the nested model.\n")
-} else {
-  cat("Fail to reject the null hypothesis. The nested model is sufficient.\n")
-}
-```
-
-```{r Frequency of protective behaviour: Model evaluation, warning = FALSE}
-# Test collinearity
-cmm_coll <- check_collinearity(cmm1)
-cmm_coll
-if (all(cmm_coll$VIF < 2)) {
-  cat("All VIFs are below the conventional threshold of 2.\n")
-} else {
-  cat("At least one VIF is above the conventional threshold of 2.\n")
-}
-
-# Test links
-links <- c("logit", "probit", "cloglog", "loglog", "cauchit")
-sapply(links, function(link) {
-clmm(freq_prevention ~ freq_bites_num + disease_fear + precarity2 + age + gender + (1|departement), data=df, Hess=T, nAGQ=10, link=link)$logLik }) #loglik lower for cauchit by 7 points
-
-# Test thresholds
-thresholds <- c("symmetric", "symmetric2", "flexible", "equidistant")
-sapply(thresholds, function(threshold){
-clmm(freq_prevention ~ freq_bites_num + disease_fear + precarity2 + age + gender + (1|departement), data=df, Hess=T, nAGQ=10, link="logit",threshold=threshold)$logLik
-}) #no change in loglik
-
-#Test approximation method: Laplace vs AGHQ
-nAGQ_values <- c(1, 10, 50)  # Corresponding AGQ values for each method
-sapply(seq_along(nAGQ_values), function(i) {
-  clmm(freq_prevention ~ freq_bites_num + disease_fear + precarity2 + age + gender + (1|departement),data = df, Hess = T, nAGQ = nAGQ_values[i])$logLik #Laplace performs slightly worse than AGQ, while nAGQ of 10 and 50 perform the same.
-})
-```
-
-```{r Frequency of protective behaviour: Final model}
-sjPlot:: tab_model(cmm1, show.se= T, show.stat= T)
-```
-
-```{r Frequency of protective behaviour: Random effects plot, dpi=500}
-plotcmm.ranef <- function(cmm1) {
-  rn <- names(cmm1[["stDev"]]) 
-  nc <- length(cmm1[["ranef"]]) 
-  ci <- cmm1$ranef + qnorm(0.975) * sqrt(cmm1$condVar) %o% c(-1, 1)
-  ord.re <- order(cmm1$ranef)
-  ci <- ci[order(cmm1$ranef), ]
-  ggplot() +
-    geom_point(aes(x = 1:nc, y = cmm1$ranef[ord.re])) + 
-    geom_errorbar(aes(x = 1:nc, ymin = ci[,1], ymax = ci[,2]), width = 0.2) + 
-    geom_hline(yintercept = 0, linetype = "dashed") + 
-    theme_minimal() +
-    theme(axis.text.x = element_blank(),
-          axis.ticks.x = element_blank()) + 
-    labs(title = "Effect of department place of residence via conditional modes on frequency of preventive behaviour",
-         x = paste0(rn, "Departments"),
-         y = paste0(rn, "Effect via conditional modes"))
-}
-plotcmm.ranef(cmm1)
-```
-
-## 2.2. Count of protective behaviours
-
-```{r Count of protective behaviours: Model selection, echo = T, results = "hide"}
-# Theory-informed model that includes a minimally sufficient set of confounding variables of the exposure-outcome relationship
-compois2 <- glmmTMB(count_prev ~ freq_bites_num + disease_fear + disease_prob + age + precarity2 + gender + edu2 + mbd_know + chronic_dis + confiance_nat + confiance_reg + hist_mborne + commune_type + (1|departement), data=df, ziformula=~1+freq_bites_num, family=compois(), control = glmmTMBControl(optCtrl = list(trace = 1), parallel = 4))
-
-# We remove independent variables that have non significant associations with the outcome variable (p-value<0.05) in one block
-# Confounders age and sex are kept regardless
-compois1 <- glmmTMB(count_prev ~ freq_bites_num + disease_fear + edu2 + mbd_know + chronic_dis + + gender + age + (1|departement), data=df, ziformula=~1+freq_bites_num, family=compois(), control = glmmTMBControl(optCtrl = list(trace = 1), parallel = 4))
-
-# Likelihood-ratio test: It evaluates if the model with fewer parameters performs significantly worse than the full mode
-compois_lrt <- lrtest(compois1, compois2)
-#alternative: anova(compois1, compois2, test="LRT") #both are equivalent in this case
-compois_lrt
-```
-
-```{r Count of protective behaviours: LRT, echo=FALSE}
-# Interpretation of likelihood ratio test results
-if (compois_lrt$"Pr(>Chisq)"[2] < 0.05) 
-{
-  cat("Reject the null hypothesis. The full model is significantly better than 
-        the nested model.\n")
-} else {
-  cat("Fail to reject the null hypothesis. The nested model is sufficient.\n")
-}
-```
-
-```{r Count of protective behaviours: Model evaluation}
-#Check collinearity
-compois_coll <- check_collinearity(compois1, ci = 0.95, verbose = TRUE)
-compois_coll
-if (all(compois_coll$VIF < 2)) {
-  cat("All VIFs are below the conventional threshold of 2.\n")
-} else {
-  cat("At least one VIF is above the conventional threshold of 2.\n")
-}
-
-#Check dispersion
-check_overdispersion(compois1)
-
-#Check zero-inflation
-testZeroInflation(compois1)
-
-#Running diagnostics on the model
-diagnose(compois1)
-
-#Check simulated residuals
-simres_compois1 <- simulateResiduals(fittedModel = compois1, re.form = NULL)
-plot(simres_compois1)
-
-#Plot residuals for each predictor to examine misfits
-testCategorical(simres_compois1, catPred = df$freq_bites_num)
-testCategorical(simres_compois1, catPred = df$edu2)
-testCategorical(simres_compois1, catPred = df$chronic_dis)
-testCategorical(simres_compois1, catPred = df$gender)
-testCategorical(simres_compois1, catPred = df$mbd_know)
-plotResiduals(simres_compois1, form = df$disease_fear)
-plotResiduals(simres_compois1, form = df$age)
-```
-
-```{r Count of protective behaviours: Final model}
-sjPlot:: tab_model(compois1, show.se= T, show.stat= T)
-```
-
-```{r Count of protective behaviours: Random effects plot, dpi=500}
-plotcompois.ranef <- function(compois1) {
-  re_compois1_data <- data.frame(
-    "intercepts" = ranef(compois1)$cond$departement$`(Intercept)`,
-    "sd" = sqrt(TMB::sdreport(compois1$obj, getJointPrecision=TRUE)$diag.cov.random),
-    "departement" = factor(row.names(ranef(compois1)$cond$departement))
-  )
-  
-  re_compois1_data$ucl <- re_compois1_data$intercepts + (re_compois1_data$sd * 1.96)
-  re_compois1_data$lcl <- re_compois1_data$intercepts - (re_compois1_data$sd * 1.96)
-  
-  ggplot(re_compois1_data, aes(x = reorder(departement, intercepts), y = intercepts)) +
-    geom_point() + 
-    geom_errorbar(aes(ymin = lcl, ymax = ucl), width = 0.2) +
-    geom_hline(yintercept = 0, linetype = "dashed") +
-    theme_minimal() +
-    theme(axis.text.x = element_blank(),
-          axis.ticks.x = element_blank()) +
-    labs(
-      title = "Effect of department place of residence via conditional modes on variety of preventive behaviour",
-      x = "Departments",
-      y = "Effect via conditional modes"
-    )
-}
-plotcompois.ranef(compois1)
-```
-
-```{r Extra bits}
-#Calculate likelihood profile CIs
-#CI_zinbmm_final <- confint(zinbmm_final, trace=1, level = 0.95, method = c("profile"), estimate = TRUE, include_nonest = TRUE, full = TRUE) #similar to Wald-based CIs
-#likelihood profile CIs are more accurate but much slower
-#Fits natural splines separately to the points from each half of the profile for each specified parameter (i.e., values above and below the MLE), then finds the inverse functions to estimate the endpoints of the confidence interval
 ```
 
